--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: MathemaTCS
+subtitle: 趣味で理論計算機科学の様々な概念を解説していきます.
 ---
